@@ -39,6 +39,10 @@
 <p>2012-02-18  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/memory.h: Decorate memory allocation functions with GCC
+attribute 'alloc_size'.</li>
+<li>magick/common.h: Add support for GCC 4.3+ attributes
+'alloc_size', 'hot', 'cold'.</li>
 <li>magick/{log.h,monitor.h,utility.h}: Use double-underscore syntax
 in GCC format attribute specifications to defend against
 accidental macro expansion.</li>
