@@ -1,5 +1,11 @@
 2012-02-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/memory.h: Decorate memory allocation functions with GCC
+	attribute 'alloc_size'.
+
+	* magick/common.h: Add support for GCC 4.3+ attributes
+	'alloc_size', 'hot', 'cold'.
+
 	* magick/{log.h,monitor.h,utility.h}: Use double-underscore syntax
 	in GCC format attribute specifications to defend against
 	accidental macro expansion.
